@@ -18,8 +18,5 @@ if [[ "$_java" ]]; then
     fi
 fi
 
-if [[ ! -f standalone.jar ]]; then
-  wget https://github.com/kurisumakise2011/graph-editor/raw/master/artifactory/standalone-jar-with-dependencies.jar
-  mv standalone-jar-with-dependencies.jar standalone.jar
-fi
-java -jar standalone.jar
+export WORKDIR=~/opt/build3
+cd "$WORKDIR"/graph-editor/demo/target/deploy && java --module-path="libs" --add-modules=javafx.controls,javafx.base,javafx.fxml,javafx.graphics -jar GraphEditorDemo.jar
